--- a/index.html
+++ b/index.html
@@ -61,23 +61,16 @@
                      <div class="col-md-12 text-center">
                         <h2 class="slide-title animated4">Years of excellence in</h2>
                         <h3 class="slide-sub-title animated5">Event Planning Industry</h3>
-                        <p>
-                           <a href="services.html" class="slider btn btn-primary">Our Services</a>
-                           <a href="contact.html" class="slider btn btn-primary border">Contact Now</a>
-                        </p>
                      </div>
                   </div>
                </div>
                <!--/ Carousel item 1 end -->
-               <div class="item" style="background-image:url(images/slider-main/bg2.jpg)">
+               <div class="item" style="background-image:url(images/slider-main/bg2.jpeg)">
                   <div class="slider-content text-left">
                      <div class="col-md-12">
                         <h2 style ="margin-top : 30px;" class="slide-title-box animated2">World Class Service</h2>
                         <h3 class="slide-title animated3">When Service Matters</h3>
                         <h3 class="slide-sub-title animated3">Your Choice is Simple</h3>
-                        <p class="animated3">
-                           <a href="services.html" class="slider btn btn-primary border">Our Services</a>
-                        </p>
                      </div>
                   </div>
                </div>
@@ -88,10 +81,6 @@
                         <h2 class="slide-title animated6">Meet Our Experts</h2>
                         <h3 class="slide-sub-title animated7">We create memories</h3>
                         <p class="slider-description lead animated7">We transform your imagination of a dream wedding into a spectacular celebration.</p>
-                        <p>
-                           <a href="contact.html" class="slider btn btn-primary">Get Free Quote</a>
-                           <a href="about.html" class="slider btn btn-primary border">Learn More</a>
-                        </p>
                      </div>
                   </div>
                </div>
