--- a/navigation-bar.html
+++ b/navigation-bar.html
@@ -12,14 +12,18 @@
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-
+								<div class="row logo-name">
+								<a href="index.html"><img class="logo-style" src="images/logo.png" alt=""></a>
+								<a target="_blank" href="tel:+918531990331" style=" font-size: 37px; color: #ffb600 !important; margin-left: 32px; top: 18px; position: sticky; " class="instagram"><i class="fa fa-phone"></i></a>
+								</div>
+								
 								<div class="collapse navbar-collapse navbar-responsive-collapse">
 									<ul class="nav navbar-nav">
-									<li><a href="index.html"><img class="logo-style" src="images/logo.png" alt=""></a></li>
+									<li class="hide-logo" ><a href="index.html"><img class="logo-style" src="images/logo.png" alt=""></a></li>
 										<li><a href="index.html">Home</a></li>
 										<li><a target="_blank" href="decorations.html">Decorations</a></li>
 										<li><a target="_blank" href="photography.html">Photography</a></li>
-										<li><a target="_blank" href="contact.html">Contact Us</a></li>
+										<li><a target="_blank" href="mailto:princedecors92@gmail.com?Subject=Hello%20Prince%20Decoration%20Needed" >Contact Us</a></li>
 									</ul>
 									<!--/ Nav ul end -->
 								</div>
