--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                            <div class="project-item-info">
                               <div class="project-item-info-content">
                                  <h3 class="project-item-title">
-                                    <a>WEDDING DECORATION</a>
+                                    <a>DECORATION</a>
                                  </h3>
                                  <p class="project-cat">We make your wedding beautiful</p>
                               </div>
@@ -196,7 +196,7 @@
                            <div class="project-item-info">
                               <div class="project-item-info-content">
                                  <h3 class="project-item-title">
-                                    <a>Mandapam / Marriage Hall</a>
+                                    <a>Marriage Hall</a>
                                  </h3>
                                  <p class="project-cat">We suggest the best venue for you</p>
                               </div>
@@ -230,7 +230,7 @@
                            <div class="project-item-info">
                               <div class="project-item-info-content">
                                  <h3 class="project-item-title">
-                                    <a>BRIDE & GROOM MAKEUP</a>
+                                    <a>BRIDAL MAKEUP</a>
                                  </h3>
                                  <p class="project-cat">Everyone will be awestruck by simply looking at you</p>
                               </div>
