--- a/footer.html
+++ b/footer.html
@@ -26,12 +26,12 @@
 						<div class="col-md-4 col-sm-12 footer-widget">
 							<h3 class="widget-title">Services</h3>
 							<ul class="list-arrow">
-								<li><a href="service-single.html">Photography</a></li>
-								<li><a href="service-single.html">Catering</a></li>
-								<li><a href="service-single.html">Invitation Cards</a></li>
-								<li><a href="service-single.html">Bridal Makeup</a></li>
-								<li><a href="service-single.html">Mehendhi</a></li>
-								<li><a href="service-single.html">Return Gifts</a></li>
+								<li><a href="decorations.html">Decoration</a></li>
+								<li><a href="photography.html">Photography</a></li>
+								<li><a href="catering.html">Catering</a></li>
+								<li><a href="makeup.html">Bridal Makeup</a></li>
+								<li><a href="marriage-hall.html">Marriage Hall</a></li>
+								<li><a href="djmusic.html">DJ Music</a></li>
 							</ul>
 						</div><!-- Col end -->
 
