--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <!-- Mobile Specific Metas
          ================================================== -->
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
       <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'css/font-awesome.min.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
       <!-- CSS
