--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   
 <script>
         let d = new Date();
-        alert("Today's date is " + d);
+        console.log("Today's date is " + d);
 		const Http = new XMLHttpRequest();
-const url='https://wishmecards.com/posts';
+const url='https://einvite.tech/posts';
 Http.open("GET", url);
 Http.send();
 
