padding removal for mobile screen

--- a/profile.html
+++ b/profile.html
@@ -18,14 +18,14 @@
    </head>
    <body class="fix-header fix-sidebar card-no-border">
       <div id="main-wrapper">
-         <div class="page-wrapper">
-            <div class="container-fluid">
+         <div class="page-wrapper no_pad_bottom">
+            <div class="container-fluid pad_15 no_pad_bottom">
                <!-- Row -->
-               <div class="row center_align" >
+               <div class="row center_align no_pad" >
                   <!-- Column -->
-                  <div class="col-lg-4 col-xlg-3 col-md-5">
+                  <div class="col-lg-4 col-xlg-3 col-md-5 no_pad">
                      <!-- Column -->
-                     <div class="card">
+                     <div class="card no_margin">
                         <!--<img class="card-img-top" src="assets/images/background/profile-bg.jpg" alt="Card image cap">-->
                         <div class="top_background little-profile text-center">
                            <div class="pro-img"><img src="assets/img/profile.jpg" alt="user" /></div>
