--- a/profile.html
+++ b/profile.html
@@ -114,7 +114,7 @@
                                     </div>
                                  </a>
 								 <!-- Payment Button -->
-                                 <a href="http://instagram.com/" class="social-margin" target="blank">
+                                 <a href="https://p-y.tm/1Kd-tTZ" class="social-margin" target="blank">
                                     <div class="social-icon payment">
                                        <i class="fas fa-money-check-alt" aria-hidden="true"></i>
 									    <span>payme</span>
@@ -129,12 +129,12 @@
                                  </a>
                                
 								 <!-- share business card Button -->
-                                 <a href="http://instagram.com/" class="social-margin" title="Share" target="_blank" rel="nofollow">
+                                <!-- <a href="http://instagram.com/" class="social-margin" title="Share" target="_blank" rel="nofollow">
                                     <div class="social-icon share">
                                        <i class="fas fa-share-alt" aria-hidden="true"></i>
 									    <span>share</span>
                                     </div>
-                                 </a>
+                                 </a>-->
                               </div>
                            </div>
 						   
