--- a/profile.html
+++ b/profile.html
@@ -196,7 +196,7 @@
                                     </div>
                                  </a>
                                  <!-- Instagram Button -->
-                                  <a href="whatsapp://send?text=The text to share!" data-action="share/whatsapp/share" class="social-margin" target="blank">
+                                  <a href="whatsapp://send?text=https%3A//wishmecards.com/profile!" data-action="share/whatsapp/share" class="social-margin" target="blank">
                                     <div class="social-icon whatsapp">
                                        <i class="fab fa-whatsapp" aria-hidden="true"></i>
 									   <span>whatsapp</span>
