--- a/profile.html
+++ b/profile.html
@@ -31,18 +31,8 @@
                            <div class="pro-img"><img src="assets/img/profile.jpg" alt="user" /></div>
                         </div>
                         <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 30px;">
-                           <h3 class="m-b-0 name_style">Angela Dominic</h3>
-                           <p class="designation">Web Designer &amp; Developer</p>
-                           <!--<a href="javascript:void(0)" class="m-t-10 waves-effect waves-dark btn btn-primary btn-md btn-rounded">Share Card</a>
-                              <div class="row text-center m-t-20">
-                                  <div class="col-lg-4 col-md-4 m-t-20">
-                                      <h3 class="m-b-0 font-light">1099</h3><small>Articles</small></div>
-                                  <div class="col-lg-4 col-md-4 m-t-20">
-                                      <h3 class="m-b-0 font-light">23,469</h3><small>Followers</small></div>
-                                  <div class="col-lg-4 col-md-4 m-t-20">
-                                      <h3 class="m-b-0 font-light">6035</h3><small>Following</small></div>
-                              </div>-->
-							 
+                           <h3 class="m-b-0 name_style">Elavarasan Nadarajan</h3>
+                           <p class="designation" style="word-wrap: break-word;">PRINCEDECORS WeddingPlanners</p> 
 						   
 							  <div class="row heading_style">
 							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
