--- a/profile.html
+++ b/profile.html
@@ -30,10 +30,13 @@
                         <div class="top_background little-profile text-center">
                            <div class="pro-img"><img src="assets/img/profile.jpg" alt="user" /></div>
                         </div>
-                        <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 30px;">
+                        <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px;">
                            <h3 class="m-b-0 name_style">Elavarasan Nadarajan</h3>
-                           <p class="designation" style="word-wrap: break-word;">PRINCEDECORS WeddingPlanners</p> 
-						   
+                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" >PRINCEDECORS</p> 
+						   <p class="designation" style="    margin-block-end: 0em;
+    font-size: 1rem !important;
+    line-height: 0.8rem;
+    margin-bottom: 21px;" >Wedding Planners</p> 
 							  <div class="row heading_style">
 							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
 							  </div>
