--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
       <meta name="author" content="">
       <!-- Favicon icon -->
      <!-- <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">-->
-      <title>Material Pro Admin Template - The Most Complete & Trusted Bootstrap 4 Admin Template</title>
+      <title>Professional Business or Visiting card for Individuals or Company</title>
       <!-- Bootstrap Core CSS -->
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
