--- a/balakrishgpl.html
+++ b/balakrishgpl.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px;">
                            <h3 class="m-b-0 name_style">Bala Krishnan</h3>
-                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" >Fitness Trainer</p> 
+                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" >Personal Trainer &#38; Fitness Trainer</p> 
 						   
 							  <div class="row heading_style">
 							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
