--- a/profile.html
+++ b/profile.html
@@ -198,7 +198,7 @@
                               </div>
                            </div>
 						    <div class="row heading_style">
-							  <h3 class ="heading_font"><a href="https://api.whatsapp.com/send?phone=+918531990331">Powered By : Elavarasan - 8531990331</a></h3>
+							  <h3 class ="footer_font"><a href="https://api.whatsapp.com/send?phone=+918531990331">Powered By : Elavarasan - 8531990331</a></h3>
 							  </div>
                         </div>
                      </div>
