--- a/vinothdental.html
+++ b/vinothdental.html
@@ -197,7 +197,7 @@
                                  </a>
                               </div>
                            </div>
-						   <div class="row heading_style">
+						   <div class="row heading_style center_align">
 							  <h3 class ="footer_font" style><a href="https://api.whatsapp.com/send?phone=+918531990331">Powered By : Elavarasan - 8531990331</a></h3>
 							  </div>
                         </div>
