--- a/balajicivil.html
+++ b/balajicivil.html
@@ -209,5 +209,12 @@
          </div>
       </div>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	 <script>
+$(document).ready(function(){
+     $(document).bind("contextmenu",function(e){
+        return false;
+    });
+});
+</script>
    </body>
 </html>
