--- a/balajicivil.html
+++ b/balajicivil.html
@@ -32,11 +32,7 @@
                         </div>
                         <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px;">
                            <h3 class="m-b-0 name_style">Balaji</h3>
-                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" >A&G facades pvt ltd.</p> 
-						   <p class="designation" style="    margin-block-end: 0em;
-    font-size: 1rem !important;
-    line-height: 0.8rem;
-    margin-bottom: 21px;" >SiteEngineer</p> 
+                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" >SiteEngineer</p> 
 							  <div class="row heading_style">
 							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
 							  </div>
