--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
          <div class="page-wrapper no_pad_bottom">
             <div class="container-fluid pad_15 no_pad_bottom">
                <!-- Row -->
-               <div class="row center_align no_pad" >
+               <div class="row center_align no_pad big_pad" >
                   <!-- Column -->
                   <div class="col-lg-4 col-xlg-3 col-md-5 no_pad">
                      <!-- Column -->
@@ -36,7 +36,7 @@
 						   <p class="designation" style="    margin-block-end: 0em;
     font-size: 1rem !important;
     line-height: 0.8rem;
-    margin-bottom: 21px;" >Wedding Planners</p> 
+    margin-bottom: 21px;" >Wedding Planner</p> 
 							  <div class="row heading_style">
 							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
 							  </div>
