--- a/vinothdental.html
+++ b/vinothdental.html
@@ -21,7 +21,7 @@
          <div class="page-wrapper no_pad_bottom">
             <div class="container-fluid pad_15 no_pad_bottom">
                <!-- Row -->
-               <div class="row center_align no_pad" >
+               <div class="row center_align no_pad big_pad" >
                   <!-- Column -->
                   <div class="col-lg-4 col-xlg-3 col-md-5 no_pad">
                      <!-- Column -->
