--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Http.onreadystatechange = (e) => {
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span>DigitalBusinessCard</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>DigitalBizCard</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="/static/assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
