--- a/syedrafi.html
+++ b/syedrafi.html
@@ -31,8 +31,8 @@
                            <div class="pro-img"><img src="assets/customer/images/syedrafi.jpg" alt="user" /></div>
                         </div>
                         <div class="card-block little-profile text-center"  style="padding-left: 15px;padding-right: 15px;    padding-top: 15px;">
-                           <h3 class="m-b-0 name_style">SYED RAFI</h3>
-                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" >SR TRADERS</p> 
+                           <h3 class="m-b-0 name_style">SR TRADERS</h3>
+                           <p class="designation" style="margin-block-end: 0em; margin-bottom: 5px;" >SYED RAFI</p> 
 							  <div class="row heading_style">
 							  <h3 class ="heading_font"><a href="">Follow Me : </a></h3>
 							  </div>
