--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ Http.onreadystatechange = (e) => {
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
+          <!--<div class="col-lg-3 col-md-4">
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
               <a href="/static/assets/img/gallery/gallery-7.png" class="venobox" data-gall="gallery-item">
                 <img src="/static/assets/img/gallery/gallery-7.png" alt="" class="img-fluid">
@@ -468,7 +468,7 @@ Http.onreadystatechange = (e) => {
                 <img src="/static/assets/img/gallery/gallery-8.png" alt="" class="img-fluid">
               </a>
             </div>
-          </div>
+          </div>-->
 
         </div>
 
@@ -756,7 +756,7 @@ Http.onreadystatechange = (e) => {
               <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">Still Have Questions ?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-parent=".faq-list">
                 <p>
-                  Please contact us throgh call or whatsapp : 8531990331,9361971993.
+                  Please contact us through call or whatsapp : 8531990331,9361971993.
                 </p>
               </div>
             </li>
@@ -768,7 +768,7 @@ Http.onreadystatechange = (e) => {
     </section><!-- End F.A.Q Section -->
 
     <!-- ======= Contact Section ======= -->
-    <!--<section id="contact" class="contact">
+    <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -836,12 +836,12 @@ Http.onreadystatechange = (e) => {
         </div>
 
       </div>
-    </section>--><!-- End Contact Section -->
+    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <!--<footer id="footer">
+  <footer id="footer">
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -923,7 +923,7 @@ Http.onreadystatechange = (e) => {
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer>--><!-- End Footer -->
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
   <div id="preloader"></div>
