--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Vendor CSS Files -->
   <link href="/static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <!--<link href="/static/assets/vendor/icofont/icofont.min.css" rel="stylesheet">-->
   <link href="/static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="/static/assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="/static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
@@ -266,7 +266,7 @@ Http.onreadystatechange = (e) => {
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="icofont-simple-smile"></i>
+			  <i class="ri-emotion-happy-line"  style="color: #fff;"></i>
               <span data-toggle="counter-up">232</span>
               <p>Happy Clients</p>
             </div>
@@ -274,7 +274,7 @@ Http.onreadystatechange = (e) => {
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="icofont-document-folder"></i>
+              <i class="ri-folder-open-fill" style="color: #fff;"></i>
               <span data-toggle="counter-up">521</span>
               <p>Projects</p>
             </div>
@@ -282,15 +282,16 @@ Http.onreadystatechange = (e) => {
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="icofont-live-support"></i>
+			<i class="ri-customer-service-line" style="color: #fff;"></i>
+              <!--<i class="ri-customer-service-fill" style="color: #fff;></i>-->
               <span data-toggle="counter-up">1,463</span>
               <p>Hours Of Support</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="icofont-users-alt-5"></i>
+            <div class="count-box" >
+              <i class="ri-group-fill"  style="color: #fff;"></i>
               <span data-toggle="counter-up">4</span>
               <p>Hard Workers</p>
             </div>
@@ -781,19 +782,19 @@ Http.onreadystatechange = (e) => {
           <div class="col-lg-4" data-aos="fade-right" data-aos-delay="100">
             <div class="info">
               <div class="address">
-                <i class="icofont-google-map"></i>
+                 <i class="ri-map-pin-2-fill" style="color: #47aeff;"></i>
                 <h4>Location:</h4>
                 <p>No:6/64,Balaraman first cross street,Namnmangalam,Medavakam,Chennai-600117.</p>
               </div>
 
               <div class="email">
-                <i class="icofont-envelope"></i>
+                <i class="ri-mail-send-line" style="color: #e80368;"></i>
                 <h4>Email:</h4>
                 <p>rameshelava@gmail.com</p>
               </div>
 
               <div class="phone">
-                <i class="icofont-phone"></i>
+                <i class="ri-phone-line" style="color: #ffbb2c;"></i>
                 <h4>Call:</h4>
                 <p>+91 85319 90331</p>
               </div>
@@ -845,24 +846,10 @@ Http.onreadystatechange = (e) => {
     <div class="footer-top">
       <div class="container">
         <div class="row">
-    <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>No:6/64,Balaraman first cross street,Namnmangalam,Medavakam,Chennai-600117.</p>
-              </div>
 
-              <div class="email">
-                <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p>rameshelava@gmail.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>+91 85319 90331</p>
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>DigitaVisitingCard</h3>
+              <h3>DigitalBizCard</h3>
               <p class="pb-3"><em>Cheapest Digital Presence for your business</em></p>
               <p>
                 No:6/64,Balaraman first cross street, <br>
@@ -884,27 +871,27 @@ Http.onreadystatechange = (e) => {
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#features">Features</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#gallery">Gallery</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#pricing">Pricing</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Web Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Web Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Graphic Design</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Please subscribe to our newsletter</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -920,12 +907,12 @@ Http.onreadystatechange = (e) => {
         &copy; Copyright <strong><span>DigitaVisitingCard</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://api.whatsapp.com/send?phone=+918531990331" target="blank">Elavarasan Nadarajan</a>
       </div>
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <a href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
