--- a/index.html
+++ b/index.html
@@ -184,73 +184,73 @@ Http.onreadystatechange = (e) => {
           <div class="col-lg-3 col-md-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
               <i class="ri-phone-line" style="color: #ffbb2c;"></i>
-              <h3><a href="">Click To Call</a></h3>
+              <h3><a href="" class="disable_a">Click To Call</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
               <i class="ri-whatsapp-fill" style="color: #5578ff;"></i>
-              <h3><a href="">Click To WhatsApp</a></h3>
+              <h3><a href="" class="disable_a">Click To WhatsApp</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
               <i class="ri-mail-send-line" style="color: #e80368;"></i>
-              <h3><a href="">Click To Email</a></h3>
+              <h3><a href="" class="disable_a">Click To Email</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <i class="ri-contacts-book-2-fill" style="color: #e361ff;"></i>
-              <h3><a href="">Add To Contacts</a></h3>
+              <h3><a href="" class="disable_a">Add To Contacts</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
               <i class="ri-map-pin-2-fill" style="color: #47aeff;"></i>
-              <h3><a href="">Click To Navigate</a></h3>
+              <h3><a href="" class="disable_a">Click To Navigate</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <i class="ri-global-line" style="color: #ffa76e;"></i>
-              <h3><a href="">Website Link</a></h3>
+              <h3><a href="" class="disable_a">Website Link</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="350">
               <i class="ri-facebook-circle-fill" style="color: #11dbcf;"></i>
-              <h3><a href="">Facebook</a></h3>
+              <h3><a href="" class="disable_a">Facebook</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="400">
               <i class="ri-messenger-fill" style="color: #4233ff;"></i>
-              <h3><a href="">Messenger</a></h3>
+              <h3><a href="" class="disable_a">Messenger</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="450">
               <i class="ri-twitter-fill" style="color: #b2904f;"></i>
-              <h3><a href="">Twitter</a></h3>
+              <h3><a href="" class="disable_a">Twitter</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="500">
               <i class="ri-linkedin-box-fill" style="color: #b20969;"></i>
-              <h3><a href="">Linkedin</a></h3>
+              <h3><a href="" class="disable_a">Linkedin</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="550">
               <i class="ri-profile-fill" style="color: #ff5828;"></i>
-              <h3><a href="">Profile</a></h3>
+              <h3><a href="" class="disable_a">Profile</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
               <i class="ri-reply-fill" style="color: #29cc61;"></i>
-              <h3><a href="">Share</a></h3>
+              <h3><a href="" class="disable_a">Share</a></h3>
             </div>
           </div>
         </div>
@@ -881,11 +881,11 @@ Http.onreadystatechange = (e) => {
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#" style="pointer-events: none;cursor: default;">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" class="disable_a">Web Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" class="disable_a">Web Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" class="disable_a">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" class="disable_a">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#" class="disable_a">Graphic Design</a></li>
             </ul>
           </div>
 
