--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Http.onreadystatechange = (e) => {
             <h1>Build Your Digital Business Card With <span>Wishmecards</span></h1>
             <h2>We are team of talanted designers making websites</h2>
             <div class="text-center text-lg-left">
-              <a href="#about" class="btn-get-started scrollto">Get Started</a>
+              <a href="#pricing" class="btn-get-started scrollto">Buy Now</a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@ Http.onreadystatechange = (e) => {
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3>Freedom from Boring Printed Business Cards</h3>
+            <h3>Watch the Demo</h3>
             <p>Forget about old fashioned printed visiting cards that generally goes to the dustbin.With our Digital Business Card, you can create and share your contact information that has Actionable one click events like Call, Email, Whatsapp, Navigation, Website Link, Payment, Social Links, Maps and more.</p>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
@@ -911,7 +911,7 @@ Http.onreadystatechange = (e) => {
       </div>
     </div>
   </footer><!-- End Footer -->
-
+ <a href="#" class="buy-now"><i>Buy Now</i></a>
   <a href="#" class="back-to-top"><i class="ri-arrow-up-s-line"></i></a>
   <div id="preloader"></div>
 
